--- a/index.html
+++ b/index.html
@@ -1,63 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="./assets/style.css">
-  <title>Frontend Mentor | Art gallery website</title>
-</head>
-<body>
-  <header>
-    <h1>Modern Art Gallery</h1>
-    <p>
-      The arts in the collection of the Modern Art Gallery all started 
-      from a spark of inspiration. Will these pieces inspire you? Visit 
-      us and find out.
-    </p>
-    <button>Our location</button>
-  </header>
-  <main>
-    <h2> Your day at the gallery</h2>
-    <p>
-      Wander through our distinct collections and find new insights about 
-      our artists. Dive into the details of their creative process.
-    </p>
-    <h3> Come &amp; be inspired</h3>
-    <p>
-      We’re excited to welcome you to our gallery and see how our collections 
-      influence you.
-    </p>
-  </main>
-  <footer>
-    <h4> Modern Art Gallery</h4>
-    <p>
-      The Modern Art Gallery is free to all visitors and open seven days a week 
-      from 8am to 9pm. Find us at 99 King Street, Newport, USA.
-    </p>
-    <div>
-      <img src="./assets/icon-facebook.svg" alt="SVG Image 1">
-      <img src="./assets/icon-instagram.svg" alt="SVG Image 2">
-      <img src="./assets/icon-twitter.svg" alt="SVG Image 2">       
-    </div>
-  </footer>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./assets/style.css" />
+    <title>Frontend Mentor | Art gallery website</title>
+  </head>
+  <body>
+    <header>
+      <div class="hero"></div>
+      <div class="header-content">
+        <h1>Modern Art Gallery</h1>
+        <p>
+          The arts in the collection of the Modern Art Gallery all started from
+          a spark of inspiration. Will these pieces inspire you? Visit us and
+          find out.
+        </p>
+        <button class="arrow-button">
+          <span class="color-bar">Our location</span>
+          <span class="arrow-icon"></span>
+        </button>       
+      </div>
+    </header>
+    <main>
+      <div class="gallery-top">
+        <div class="gallery-content">
+          <h2>Your day at the gallery</h2>
+          <p>
+            Wander through our distinct collections and find new insights about
+            our artists. Dive into the details of their creative process.
+          </p>      
+        </div>        
+        <div class="gallery"></div>
+      </div>
 
-  
-
- 
-
-  
-
- 
-
-
-
- 
-
-
- 
-
- 
-</body>
+      <div class="gallery-bottom">
+        <div class="left-image"></div>
+        <div class="right-side">
+          <div class="little-image"></div>
+          <h3>Come &amp; be inspired</h3>
+          <div class="gallery-text">
+            <p>
+              We’re excited to welcome you to our gallery and see how our
+              collections influence you.
+            </p>
+          </div>
+         
+        </div>
+      </div>
+    </main>
+    <footer>
+      <h4>Modern Art Gallery</h4>
+      <p class="footer-text">
+        The Modern Art Gallery is free to all visitors and open seven days a
+        week from 8am to 9pm. Find us at 99 King Street, Newport, USA.
+      </p>
+      <div>
+        <img class="icons" src="./assets/icon-facebook.svg" alt="SVG Image 1" />
+        <img
+          class="icons"
+          src="./assets/icon-instagram.svg"
+          alt="SVG Image 2"
+        />
+        <img class="icons" src="./assets/icon-twitter.svg" alt="SVG Image 3" />
+      </div>
+    </footer>
+  </body>
 </html>
