--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@900&family=Outfit:wght@100&display=swap" rel="stylesheet">
     <link
       rel="icon"
       type="image/png"
@@ -44,9 +46,9 @@
       <div class="gallery-bottom">
         <div class="left-image"></div>
         <div class="right-side">
-          <div class="little-image"></div>
-          <h3>Come &amp; be inspired</h3>
+          <div class="little-image"></div>         
           <div class="gallery-text">
+            <h3>Come &amp; be inspired</h3>
             <p>
               We’re excited to welcome you to our gallery and see how our
               collections influence you.
