still messing around in tablet mode, added the location page, need to fix the layout a bit.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   </head>
   <body>
     <header>
-      <div class="hero"></div>
+      <div class="hero">
+        <img src="./assets/tablet/image-hero.jpg" alt="">
+      </div>
       <div class="header-content">
         <h1>Modern Art Gallery</h1>
         <p>
@@ -25,10 +27,10 @@
           a spark of inspiration. Will these pieces inspire you? Visit us and
           find out.
         </p>
-        <button class="arrow-button">
+        <a class="arrow-button" href="./location.html">
           <span class="color-bar">Our location</span>
           <span class="arrow-icon"></span>
-        </button>       
+        </a>       
       </div>
     </header>
     <main>
@@ -40,13 +42,19 @@
             our artists. Dive into the details of their creative process.
           </p>      
         </div>        
-        <div class="gallery"></div>
+        <div class="gallery">
+          <img src="./assets/tablet/image-grid-1.jpg" alt="">
+        </div>
       </div>
 
       <div class="gallery-bottom">
-        <div class="left-image"></div>
+        <div class="left-image">
+          <img class="bench" src="./assets/tablet/image-grid-2.jpg" alt="">
+        </div>
         <div class="right-side">
-          <div class="little-image"></div>         
+          <div class="little-image">
+            <img class="gallery-image" src="./assets/tablet/image-grid-3.jpg" alt="">
+          </div>         
           <div class="gallery-text">
             <h3>Come &amp; be inspired</h3>
             <p>
