--- a/location.html
+++ b/location.html
@@ -1,32 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+     integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+     crossorigin=""/>
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@900&family=Outfit:wght@100&display=swap"
+    rel="stylesheet">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
+  <link rel="stylesheet" href="./assets/style.css" />
+
   <title>Frontend Mentor | Art gallery website</title>
 </head>
+
 <body>
+  <div class="map-section" id="map">
+    <a class="arrow-button" href="./index.html">
+      <span class="color-bar">Back to Home</span>
+      <span class="arrow-icon"></span>
+    </a>
+  </div>
+  <main class="location-content">
+    <div class="location-heading">
+      <h1>Our</h1>
+      <h1>location</h1>
+    </div>
 
-  Back to Home
+    <div class="address-content">
+      <h2>99 King Street</h2>
+      <div class="address">
+        <p>Newport</p>
+        <p>RI 02840</p>
+        <p> United States of America</p>
+      </div>
+      <div class="about">
+        <p>
+          Our newly opened gallery is located near the Edward King House on 99 King
+          Street, the Modern Art Gallery is free to all visitors and open seven days
+          a week from 8am to 9pm.
+        </p>
+      </div>
+    </div>
+  </main>
+  <footer class="location-footer">
+    <div>
+     <h3> Modern</h3>
+     <h3>Art Gallery</h3>
+    </div>
+    
+    <div class="footer-content">
+      <p class="location-footer-text">
+        The Modern Art Gallery is free to all visitors and open seven days a week
+        from 8am to 9pm. Find us at 99 King Street, Newport, USA.
+      </p>
+    </div>
+    <div class="icon-wrapper">
+      <img class="footer-icons" src="./assets/icon-dark-facebook.svg" alt="SVG Image 1" />
+      <img class="footer-icons" src="./assets/icon-dark-instagram.svg" alt="SVG Image 2" />
+      <img class="footer-icons" src="./assets/icon-dark-twitter.svg" alt="SVG Image 3" />
+    </div>
+  </footer>
 
-  Our location
 
-  99 King Street
-  Newport
-  RI 02840
-  United States of America
 
-  Our newly opened gallery is located near the Edward King House on 99 King 
-  Street, the Modern Art Gallery is free to all visitors and open seven days 
-  a week from 8am to 9pm.
 
-  Modern Art Gallery
 
-  The Modern Art Gallery is free to all visitors and open seven days a week 
-  from 8am to 9pm. Find us at 99 King Street, Newport, USA.
 
+
+
+
+
+
+
+
+
+
+  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+  integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+  crossorigin=""></script>
+  <script src="./assets/map.js"></script>
 </body>
+
 </html>
