working on moble will not done

--- a/index.html
+++ b/index.html
@@ -72,13 +72,9 @@
         The Modern Art Gallery is free to all visitors and open seven days a
         week from 8am to 9pm. Find us at 99 King Street, Newport, USA.
       </p>
-      <div>
+      <div class="icon-wrapper">
         <img class="icons" src="./assets/icon-facebook.svg" alt="SVG Image 1" />
-        <img
-          class="icons"
-          src="./assets/icon-instagram.svg"
-          alt="SVG Image 2"
-        />
+        <img class="icons" src="./assets/icon-instagram.svg" alt="SVG Image 2" />
         <img class="icons" src="./assets/icon-twitter.svg" alt="SVG Image 3" />
       </div>
     </footer>
