i made a lot of changes should have pushed more often

--- a/location.html
+++ b/location.html
@@ -23,7 +23,7 @@
   <div class="map-section" id="map">
     <a class="arrow-button" href="./index.html">
       <span class="color-bar">Back to Home</span>
-      <span class="arrow-icon"></span>
+      <span class="location-arrow-icon"></span>
     </a>
   </div>
   <main class="location-content">
