--- a/index.html
+++ b/index.html
@@ -18,17 +18,24 @@
   <body>
     <header>
       <div class="hero">
-        <img src="./assets/tablet/image-hero.jpg" alt="">
+        <div class="hero-text">
+          <h1>MODERN</h1>
+          <h1>ART GALLERY</h1>
+        </div>
+       
+        <img class="desktop" src="./assets/desktop/image-hero.jpg" alt="">
+        <img class="tablet" src="./assets/tablet/image-hero.jpg" alt="">
+        <img class="mobile" src="./assets/mobile/image-hero.jpg" alt="">
       </div>
       <div class="header-content">
-        <h1>Modern Art Gallery</h1>
+        <h2>MODERN ART GALLERY</h2>
         <p>
           The arts in the collection of the Modern Art Gallery all started from
           a spark of inspiration. Will these pieces inspire you? Visit us and
           find out.
         </p>
         <a class="arrow-button" href="./location.html">
-          <span class="color-bar">Our location</span>
+          <span class="color-bar">OUR lOCATION</span>
           <span class="arrow-icon"></span>
         </a>       
       </div>
@@ -36,24 +43,30 @@
     <main>
       <div class="gallery-top">
         <div class="gallery-content">
-          <h2>Your day at the gallery</h2>
+          <h2>YOUR DAT AT THE GALLERY</h2>
           <p>
             Wander through our distinct collections and find new insights about
             our artists. Dive into the details of their creative process.
           </p>      
         </div>        
         <div class="gallery">
-          <img src="./assets/tablet/image-grid-1.jpg" alt="">
+          <img class="desktop" src="./assets/desktop/image-grid-1.jpg" alt="">
+          <img class="tablet" src="./assets/tablet/image-grid-1.jpg" alt="">
+          <img class="mobile" src="./assets/mobile/image-grid-1.jpg" alt="">
         </div>
       </div>
 
       <div class="gallery-bottom">
         <div class="left-image">
-          <img class="bench" src="./assets/tablet/image-grid-2.jpg" alt="">
+          <img class="bench desktop" src="./assets/desktop/image-grid-2.jpg" alt="">
+          <img class="bench tablet" src="./assets/tablet/image-grid-2.jpg" alt="">
+          <img class="bench  mobile" src="./assets/mobile/image-grid-2.jpg" alt="">
         </div>
         <div class="right-side">
           <div class="little-image">
-            <img class="gallery-image" src="./assets/tablet/image-grid-3.jpg" alt="">
+            <img class="gallery-image desktop" src="./assets/desktop/image-grid-3.jpg" alt="">
+            <img class="gallery-image tablet" src="./assets/tablet/image-grid-3.jpg" alt="">
+            <img class="gallery-image mobile" src="./assets/mobile/image-grid-3.jpg" alt="">
           </div>         
           <div class="gallery-text">
             <h3>Come &amp; be inspired</h3>
@@ -67,7 +80,7 @@
       </div>
     </main>
     <footer>
-      <h4>Modern Art Gallery</h4>
+      <h4>MODERN ART GALLERY</h4>
       <p class="footer-text">
         The Modern Art Gallery is free to all visitors and open seven days a
         week from 8am to 9pm. Find us at 99 King Street, Newport, USA.
@@ -78,5 +91,6 @@
         <img class="icons" src="./assets/icon-twitter.svg" alt="SVG Image 3" />
       </div>
     </footer>
+    <script src="./assets/index.js"></script>
   </body>
 </html>
